--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": false,
-"NamaBot":"HelgaBot",
-"NomorOwner":"6282138919347",
-"NamaOwner":"Helga`",
+"NamaBot":"LuxxzJk",
+"NomorOwner":"6289636161110",
+"NamaOwner":"Aldii",
 "HunterApi":"Ikyy69"
 }
